--- a/Resomar/WebContent/View/home/home.css
+++ b/Resomar/WebContent/View/home/home.css
@@ -387,16 +387,26 @@ html { height: 100%;}
     background-color: #3a3a3a;
 }
 
-.card {
-    margin-left: 21%;
+.fast-acess {
+    margin-left: 20%;
     margin-top: 2%;
+}
+
+.card-header {
+    background-color: #212529;
+    color: #bdbdbd;
 }
 
 .title-acess {
     margin-top: 10%;
 }
 
-.container {
-    width: 80%;
-    margin: 5px;
+.fa-plus-circle {
+    font-size: 20px;
+    color: darkgreen;
+}
+
+.icon-dash {
+    float: right;
+    color: #212529;
 }
