--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -1,30 +1,65 @@
-<div class="card bg-light mb-3" style="max-width: 73rem;">
+<div class="card fast-acess bg-light" style="max-width: 73rem;">
     <h4 class="card-header">Acesso Rápido</h4>
     <div class="card-body row">
-        <div class="container border rounded col-md-3">
-            <div class="title-acess">Pacientes</div>
-            <hr>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
         </div>
-        <div class="container border rounded col-md-3">
-            <div class="title-acess">Pacientes</div>
-            <hr>
+        <div class="col-md-4 form-group">
+            <div class="card">
+                <div class="card-body">
+                    <span>Doações</span><i class="fas fa-donate icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
         </div>
-        <div class="container border rounded col-md-3">
-            <div class="title-acess">Pacientes</div>
-            <hr>
+        <div class="col-md-4 form-group">
+            <div class="card">
+                <div class="card-body">
+                    <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 form-group">
+            <div class="card">
+                <div class="card-body">
+                    <span>Instituições</span><i class="fas fa-building icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 form-group">
+            <div class="card">
+                <div class="card-body">
+                    <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 form-group">
+            <div class="card">
+                <div class="card-body">
+                    <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
+                    <hr>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="card bg-light mb-3" style="max-width: 73rem;">
+<div class="card fast-acess bg-light mb-3" style="max-width: 73rem;">
     <h4 class="card-header">Informações</h4>
     <div class="card-body">
-
-
-
-
-
-
-
-
+        <canvas id="myChart" width="100" height="30"></canvas>
     </div>
 </div>
