--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -7,8 +7,7 @@
             <div class="sidebar-header">
                 <div class="user-info">
                     <span class="user-name">Edison Schulz</span>
-                    <span
-                            class="user-role">Administrador
+                    <span class="user-role">Administrador
                     </span>
                 </div>
             </div>
@@ -20,15 +19,13 @@
                     </li>
                     <li class="sidebar-dropdown">
                         <a href="#">
-                            <i
-                                    class="fa fa-home"></i>
+                            <i class="fa fa-home"></i>
                             <span>Início</span>
                         </a>
                     <li class="sidebar-dropdown" ng-init="showCadastro = false"
                         ng-click="showCadastro = !showCadastro">
                         <a href="#">
-                            <i
-                                    class="fas fa-plus-square"></i>
+                            <i class="fas fa-plus-square"></i>
                             <span>Cadastros</span>
                         </a>
                     </li>
@@ -43,7 +40,6 @@
                             <li>
                                 <a href="#">
                                     <i class="fas fa-donate"></i>
-                                    </i>
                                     <Span>Doações</Span>
                                 </a>
                             </li>
@@ -55,7 +51,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <i class="far fa-building"></i>
+                                    <i class="fas fa-building"></i>
                                     <span>Instituições</span>
                                 </a>
                             </li>
@@ -82,22 +78,19 @@
 
                     <li class="sidebar-dropdown">
                         <a href="#">
-                            <i
-                                    class="fas fa-ticket-alt"></i>
+                            <i class="fas fa-ticket-alt"></i>
                             <span>Vouchers</span>
                         </a>
                     </li>
                     <li class="sidebar-dropdown">
                         <a href="#">
-                            <i
-                                    class="fas fa-paste"></i>
+                            <i class="fas fa-paste"></i>
                             <span>Relatórios</span>
                         </a>
                     </li>
                     <li class="sidebar-dropdown">
                         <a href="#">
-                            <i
-                                    class="fas fa-cog"></i>
+                            <i class="fas fa-cog"></i>
                             <span>Configurações</span>
                         </a>
                     </li>
