--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -6,7 +6,7 @@
                 <div class="card-body">
                     <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
@@ -15,7 +15,7 @@
                 <div class="card-body">
                     <span>Doações</span><i class="fas fa-donate icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <span>Instituições</span><i class="fas fa-building icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
                 <div class="card-body">
                     <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <div class="card-body">
                     <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
