--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -90,7 +90,7 @@
                     </li>
                     <li class="sidebar-dropdown">
                         <a href="#">
-                            <i class="fas fa-cog"></i>
+                            <i class="fa fa-cog"></i>
                             <span>Configurações</span>
                         </a>
                     </li>
